--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <div class="logo">InternshipArticles</div>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
+    <nav class="nav-bar">
+      <ul>
+        <li>
+          <a href="" class="active">Home</a>
+        </li>
+        <li>
+          <a href="" >Articles</a>
+        </li>
+        <li>
+          <a href="">Share</a>
+        </li>
+        <li>
+          <a href="">Contacts</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+
   <div class="container swiper">
     <div class="slider-wrapper">
       <div class="card-list swiper-wrapper">
