--- a/index.html
+++ b/index.html
@@ -17,94 +17,212 @@
     </div>
     <nav class="nav-bar">
       <ul>
-        <li>
-          <a href="" class="active">Home</a>
-        </li>
-        <li>
-          <a href="" >Articles</a>
-        </li>
-        <li>
-          <a href="">Share</a>
-        </li>
-        <li>
-          <a href="">Contacts</a>
-        </li>
+        <li><a href="/index.html" class="active">Home</a></li>
+        <li><a href="/articles.html">Articles</a></li>
+        <li><a href="/Share.html">Share</a></li>
+        <li><a href="/contacts.html">Contacts</a></li>
       </ul>
     </nav>
   </header>
 
+  <!-- React search bar will render here -->
+  <div id="react-root"></div>
 
   <div class="container swiper">
-    <div class="slider-wrapper">
-      <div class="card-list swiper-wrapper">
-        <div class="card-item swiper-slide">
-          <img src="images/5393447809958668315.jpg" alt="User Image" class="user-image">
-          <h2 class="user-name">Fakiya</h2>
-          <p class="user-profession">Software Engineer</p>
-          <button class="readmore-button">Read More</button>
+    <div class="slider-wrapper swiper-wrapper">
+      <div class="card-item swiper-slide" data-keywords="software engineer ui ux">
+        <img src="images/5393447809958668315.jpg" alt="User Image" class="user-image" />
+        <h2 class="user-name">Fakiya</h2>
+        <p class="user-profession">Software Engineer</p>
+        <div class="topics">
+          <div class="topic">UI/UX</div>
+          <div class="topic">Teaching Experience</div>
+          <div class="topic">Sophomore</div>
         </div>
+      </div>
 
-        <div class="card-item swiper-slide">
+        <div class="card-item swiper-slide" data-keywords="data scientist ui ux">
           <img src="images/5393447809958668315.jpg" alt="User Image" class="user-image">
           <h2 class="user-name">Nina Hamidli</h2>
           <p class="user-profession">Data Scientist</p>
-          <button class="readmore-button">Read More</button>
+          <div class="topics">
+            <div class="topic">UI/UX</div>
+            <div class="topic">Teaching Experience</div>
+            <div class="topic">Sophomore</div>
+          </div>
         </div>
 
-        <div class="card-item swiper-slide">
+        <div class="card-item swiper-slide" data-keywords="data scientist ui ux">
           <img src="images/5393447809958668315.jpg" alt="User Image" class="user-image">
-          <h2 class="user-name">Thomás Linck</h2>
-          <p class="user-profession">Software Engineer Intern</p>
-          <button class="readmore-button">Read More</button>
+          <h2 class="user-name">Nina Hamidli</h2>
+          <p class="user-profession">Data Scientist</p>
+          <div class="topics">
+            <div class="topic">UI/UX</div>
+            <div class="topic">Teaching Experience</div>
+            <div class="topic">Sophomore</div>
+          </div>
         </div>
 
-        <div class="card-item swiper-slide">
+
+        <div class="card-item swiper-slide" data-keywords="data scientist ui ux">
           <img src="images/5393447809958668315.jpg" alt="User Image" class="user-image">
-          <h2 class="user-name">Alima Aset</h2>
-          <p class="user-profession">Associate Consultant Intern</p>
-          <button class="readmore-button">Read More</button>
+          <h2 class="user-name">Nina Hamidli</h2>
+          <p class="user-profession">Data Scientist</p>
+          <div class="topics">
+            <div class="topic">UI/UX</div>
+            <div class="topic">Teaching Experience</div>
+            <div class="topic">Sophomore</div>
+          </div>
         </div>
 
-        <div class="card-item swiper-slide">
+
+        <div class="card-item swiper-slide" data-keywords="data scientist ui ux">
           <img src="images/5393447809958668315.jpg" alt="User Image" class="user-image">
-          <h2 class="user-name">Shaghayegh M. Rad</h2>
-          <p class="user-profession">Software Engineer</p>
-          <button class="readmore-button">Read More</button>
+          <h2 class="user-name">Nina Hamidli</h2>
+          <p class="user-profession">Data Scientist</p>
+          <div class="topics">
+            <div class="topic">UI/UX</div>
+            <div class="topic">Teaching Experience</div>
+            <div class="topic">Sophomore</div>
+          </div>
         </div>
 
-        <div class="card-item swiper-slide">
+
+        <div class="card-item swiper-slide" data-keywords="data scientist ui ux">
           <img src="images/5393447809958668315.jpg" alt="User Image" class="user-image">
-          <h2 class="user-name">Assem Bekbolatkyzy</h2>
-          <p class="user-profession">Software Engineer</p>
-          <button class="readmore-button">Read More</button>
+          <h2 class="user-name">Nina Hamidli</h2>
+          <p class="user-profession">Data Scientist</p>
+          <div class="topics">
+            <div class="topic">UI/UX</div>
+            <div class="topic">Teaching Experience</div>
+            <div class="topic">Sophomore</div>
+          </div>
         </div>
 
-        <div class="card-item swiper-slide">
+
+        <div class="card-item swiper-slide" data-keywords="data scientist ui ux">
           <img src="images/5393447809958668315.jpg" alt="User Image" class="user-image">
-          <h2 class="user-name">Fady Hanna</h2>
-          <p class="user-profession">Software Engineer</p>
-          <button class="readmore-button">Read More</button>
+          <h2 class="user-name">Nina Hamidli</h2>
+          <p class="user-profession">Data Scientist</p>
+          <div class="topics">
+            <div class="topic">UI/UX</div>
+            <div class="topic">Teaching Experience</div>
+            <div class="topic">Sophomore</div>
+          </div>
         </div>
 
-
-        <div class="card-item swiper-slide">
+        <div class="card-item swiper-slide" data-keywords="data scientist ui ux">
           <img src="images/5393447809958668315.jpg" alt="User Image" class="user-image">
-          <h2 class="user-name">Ahmed Ibrahim</h2>
-          <p class="user-profession">Software Engineer</p>
-          <button class="readmore-button">Read More</button>
+          <h2 class="user-name">Nina Hamidli</h2>
+          <p class="user-profession">Data Scientist</p>
+          <div class="topics">
+            <div class="topic">UI/UX</div>
+            <div class="topic">Teaching Experience</div>
+            <div class="topic">Sophomore</div>
+          </div>
         </div>
+
+
+        <div class="card-item swiper-slide" data-keywords="data scientist ui ux">
+          <img src="images/5393447809958668315.jpg" alt="User Image" class="user-image">
+          <h2 class="user-name">Nina Hamidli</h2>
+          <p class="user-profession">Data Scientist</p>
+          <div class="topics">
+            <div class="topic">UI/UX</div>
+            <div class="topic">Teaching Experience</div>
+            <div class="topic">Sophomore</div>
+          </div>
+        </div>
+
+
+        <div class="card-item swiper-slide" data-keywords="data scientist ui ux">
+          <img src="images/5393447809958668315.jpg" alt="User Image" class="user-image">
+          <h2 class="user-name">Nina Hamidli</h2>
+          <p class="user-profession">Data Scientist</p>
+          <div class="topics">
+            <div class="topic">UI/UX</div>
+            <div class="topic">Teaching Experience</div>
+            <div class="topic">Sophomore</div>
+          </div>
+        </div>
+
+
+        <div class="card-item swiper-slide" data-keywords="data scientist ui ux">
+          <img src="images/5393447809958668315.jpg" alt="User Image" class="user-image">
+          <h2 class="user-name">Nina Hamidli</h2>
+          <p class="user-profession">Data Scientist</p>
+          <div class="topics">
+            <div class="topic">UI/UX</div>
+            <div class="topic">Teaching Experience</div>
+            <div class="topic">Sophomore</div>
+          </div>
+        </div>
+
+        <!-- Add more cards as needed -->
       </div>
 
       <div class="swiper-pagination"></div>
       <div class="swiper-slide-button swiper-button-prev"></div>
       <div class="swiper-slide-button swiper-button-next"></div>
-
     </div>
   </div>
 
-
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
   <script src="script.js"></script>
+
+  <!-- React and ReactDOM from CDN -->
+  <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+
+  <!-- Babel (for JSX support in browser) -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+  <!-- Inline React component -->
+  <script type="text/babel">
+    function SearchBar({ onSearch }) {
+      const [query, setQuery] = React.useState('');
+
+      const handleInputChange = (e) => {
+        setQuery(e.target.value);
+        onSearch(e.target.value); // Trigger search on input change
+      };
+
+      return (
+        <div className="search-container">
+          <input
+            type="text"
+            value={query}
+            onChange={handleInputChange}
+            placeholder="Search articles by topic or interest..."
+            className="search-input"
+          />
+        </div>
+      );
+    }
+
+    function App() {
+      React.useEffect(() => {
+        const allCards = Array.from(document.querySelectorAll('.card-item'));
+        setFilteredCards(allCards);
+      }, []);
+
+      const [filteredCards, setFilteredCards] = React.useState([]);
+
+      const handleSearch = (query) => {
+        const allCards = Array.from(document.querySelectorAll('.card-item'));
+
+        const matchingCards = allCards.filter((card) =>
+          card.getAttribute('data-keywords').toLowerCase().includes(query.toLowerCase())
+        );
+
+        allCards.forEach((card) => (card.style.display = 'none'));
+        matchingCards.forEach((card) => (card.style.display = 'block'));
+      };
+
+      return <SearchBar onSearch={handleSearch} />;
+    }
+
+    ReactDOM.render(<App />, document.getElementById('react-root'));
+  </script>
 </body>
 </html>
