--- a/index.html
+++ b/index.html
@@ -24,6 +24,42 @@
       </ul>
     </nav>
   </header> 
+  <!-- Top Sliders Section -->
+  <div class="top-sliders">
+
+
+  </div>
+  <div class="scroll-container">
+    <!--Section 1 -->
+    <section class="card">
+      <div class="thumbnail">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/169963/Stag.svg" alt="Stag">
+      </div>
+      <h1 class="title">Technology</h1>
+      <p class="description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+    </section>
+    
+    <!-- Section 2 -->
+    <section class="card">
+      <div class="thumbnail">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/169963/Bear.svg" alt="Bear">
+      </div>
+      <h1 class="title">Business</h1>
+      <p class="description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+    </section>
+
+
+    <!-- Section 3 -->
+    <section class="card">
+      <div class="thumbnail">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/169963/Bear.svg" alt="Bear">
+      </div>
+      <h1 class="title">Research</h1>
+      <p class="description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+    </section>
+
+
+  </div>
   <script src="script.js"></script>
 
 
