--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
 
 
   <div id="main-container"></div>
-
+  <script src="main.js"></script>
   <script src="script.js"></script>
-
 
   </script>
 </body>
