--- a/articles page/articles.html
+++ b/articles page/articles.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card UI Example</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../main page/style.css">
 </head>
 <body>
   <div id="technology-container"></div>
   <script src="technologypage.js"></script>
-  <script src="script.js"></script>
+  <script src="../main page/script.js"></script>
 </body>
 </html>
