--- a/main page/header.html
+++ b/main page/header.html
@@ -8,9 +8,9 @@
   <nav class="nav-bar">
     <ul>
       <li><a href="/index.html" class="active">Home</a></li>
-      <li><a href="/articles.html">Articles</a></li>
-      <li><a href="/Share.html">Share</a></li>
-      <li><a href="/contacts.html">Contacts</a></li>
+      <li><a href="articles page/articles.html">Articles</a></li>
+      <li><a href="../Share.html">Share</a></li>
+      <li><a href="../contacts.html">Contacts</a></li>
     </ul>
   </nav>
 </header>
