updated click buttons

--- a/articles_page/articles.html
+++ b/articles_page/articles.html
@@ -9,6 +9,6 @@
 <body>
   <div id="technology-container"></div>
   <script src="../main page/script.js"></script>
-  <script src="technologypage.js"></script>
+  <script src="articlespage.js"></script>
 </body>
 </html>
