--- a/main page/index.html
+++ b/main page/index.html
@@ -31,7 +31,7 @@
   </div>
   <div class="scroll-container">
     <!--Section 1 -->
-    <section class="card">
+    <section class="card" id="technology">
       <div class="thumbnail">
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/169963/Stag.svg" alt="Stag">
       </div>
@@ -40,7 +40,7 @@
     </section>
     
     <!-- Section 2 -->
-    <section class="card">
+    <section class="card" id="business">
       <div class="thumbnail">
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/169963/Bear.svg" alt="Bear">
       </div>
@@ -50,7 +50,7 @@
 
 
     <!-- Section 3 -->
-    <section class="card">
+    <section class="card" id="research">
       <div class="thumbnail">
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/169963/Bear.svg" alt="Bear">
       </div>
@@ -63,6 +63,8 @@
 
 
   <div id="main-container"></div>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  
   <script src="main.js"></script>
   <script src="script.js"></script>
 
