--- a/articles_page/articles.html
+++ b/articles_page/articles.html
@@ -12,3 +12,20 @@
   <script src="articlespage.js"></script>
 </body>
 </html>
+
+<header>
+  <div class="logo">InternshipArticles</div>
+  <div class="hamburger">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+  </div>
+  <nav class="nav-bar">
+    <ul>
+      <li><a href="../main page/index.html">Home</a></li>
+      <li><a href="articles.html" class = "active">Articles</a></li>
+      <li><a href="../Share.html">Share</a></li>
+      <li><a href="../contacts.html">Contacts</a></li>
+    </ul>
+  </nav>
+</header>
