--- a/main page/index.html
+++ b/main page/index.html
@@ -18,7 +18,7 @@
     <nav class="nav-bar">
       <ul>
         <li><a href="/index.html" class="active">Home</a></li>
-        <li><a href="../articles page/articles.html">Articles</a></li>
+        <li><a href="../articles_page/articles.html">Articles</a></li>
         <li><a href="/Share.html">Share</a></li>
         <li><a href="/contacts.html">Contacts</a></li>
       </ul>
@@ -64,7 +64,7 @@
 
   <div id="main-container"></div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  
+
   <script src="main.js"></script>
   <script src="script.js"></script>
 
