share page form

--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card UI Example</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../main page/style.css">
 </head>
 <body>
   <header>
@@ -21,10 +21,10 @@
           <a href="/index.html" >Home</a>
         </li>
         <li>
-          <a href="/articles.html" >Articles</a>
+          <a href="../articles_page/articles.html" >Articles</a>
         </li>
         <li>
-          <a href="/Share.html">Share</a>
+          <a href="../share_page/Share.html">Share</a>
         </li>
         <li>
           <a href="/contacts.html" class="active" >Contacts</a>
