--- a/share_page/Share.html
+++ b/share_page/Share.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card UI Example</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../main page/style.css">
 </head>
 <body>
   <header>
@@ -21,10 +21,10 @@
           <a href="/index.html" >Home</a>
         </li>
         <li>
-          <a href="/articles.html" >Articles</a>
+          <a href="../articles_page/articles.html" >Articles</a>
         </li>
         <li>
-          <a href="/Share.html" class="active" >Share</a>
+          <a href="Share.html" class="active" >Share</a>
         </li>
         <li>
           <a href="/contacts.html" >Contacts</a>
@@ -32,5 +32,14 @@
       </ul>
     </nav>
   </header>
+
+  <form id ="users">
+    <p>
+      <label for="username">Enter your name:</label>
+      <input type="text" id="username" name="username" value="Dominic" />
+    </p>
+    
+    <input type="submit" value="Submit" />
+  </form>
 </body>
 </html>
