--- a/main page/index.html
+++ b/main page/index.html
@@ -19,7 +19,7 @@
       <ul>
         <li><a href="/index.html" class="active">Home</a></li>
         <li><a href="../articles_page/articles.html">Articles</a></li>
-        <li><a href="/Share.html">Share</a></li>
+        <li><a href="/share_page/Share.html">Share</a></li>
         <li><a href="/contacts.html">Contacts</a></li>
       </ul>
     </nav>
